--- a/miao/garden.html
+++ b/miao/garden.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" media="screen" href="/214/214.css?v=8may2013">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="https://www.csszengarden.com/zengarden.xml">
 
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Dave Shea">
     <meta name="description" content="A demonstration of what can be accomplished visually through CSS-based design.">
     <meta name="robots" content="all">
@@ -16,7 +16,7 @@
   
   </head>
 
-  <body id="csss-zen-garden">
+  <body id="css-zen-garden">
     <div class="page-wrapper">
 
       <section class="intro" id="zen-intro">
