--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -61,6 +61,12 @@
     <dt>
       班级
       <dd>
+        三年二班
+      </dd>
+    </dt>
+    <dt>
+      老师
+      <dd>
         张老师
       </dd>
       <dd>
