--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -8,14 +8,14 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt fuga maxime vel quam itaque facilis dolor molestiae tempora culpa, omnis reiciendis ut aliquid eius sunt excepturi quod delectus laudantium. Voluptates.</p>
     <a href="https://www.jd.com/">在新窗口打开京东</a>
     <a href="mailto:222@qq.com">点我发邮件</a>
-    <a herf=“#page-bottom">跳到页面底部</a>
+    <a href="#page_bottom">跳到页面底部</a>
     <a href="file:///C:/Users/14359/FOO.js">点我下载文件</a>
     <br/>
     <img src="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b" width="200" height="200">
     <hr/>
     <hr/>
     <marquee>飘~~~</marquee>
-    <p>这几种强调<b>有什么 </b><strong>区别呢? </strong><u>这个呢?</u> <em>这个呢?</em></p>
+    <p>这几种强调<b>有什么 </b><strong>区别呢? </strong><u>这个呢? </u> <em>这个呢?</em></p>
     <p>&lt;!-- 这段注释需要出现在页面里面 --></p>
     <p>html的注释怎么写?</p>
     <p>下面是一段javascript代码, 最合适用何种标签表示呢?</p>
@@ -87,5 +87,84 @@
     </dt>
     <hr/>
     <h3>Google搜索</h3>
+    <form action="https:www.google.com/search" target="_blank">
+      <input type="search" name="q">
+      <button type="submit" >在新窗口打开搜索结果</button>
+    </form>
+    <hr/>
+    <p>个人信息调查表</p>
+    <form action="">
+      <dt>
+      性别
+      <dd>
+        <label>
+          <input type="radio" name="gender" value="male"> 男
+        </label>
+        <label>
+          <input type="radio" name="gender" value="female"> 女
+        </label>
+      </dd>
+      </dt>
+      <dt>
+        年龄
+      </dt>
+      <dd>
+        <select name="age">
+          <option selected value="0" hidden>请选择</option>
+          <optgroup label="少年">
+            <option value="1">1到6岁</option>
+            <option value="2">7到12岁</option>
+          </optgroup>
+          <optgroup label="青年">
+            <option value="3">13到15岁</option>
+            <option value="4">16到18岁</option>
+          </optgroup>
+          <optgroup label="壮年">
+            <option value="5">1到6岁</option>
+            <option value="6">6到12岁</option>
+          </optgroup>
+        </select>
+      </dd>
+      <dt>
+        生日
+      </dt>
+      <dd>
+        <input type="date">
+      </dd>
+      <dt>
+        生辰
+      </dt>
+      <dd>
+        <input type="time">
+      </dd>
+      <dt>
+        照片
+      </dt>
+      <dd>
+        <label><input type="file" hidden accept="image/*">点我上传照片，我比文件上传按钮好看</label>
+      </dd>
+      <dt>
+        肤色
+      </dt>
+      <dd>
+        <input type="color" value="#000000">
+      </dd>
+      <dt>
+        自我介绍
+      </dt>
+      <dd>
+        <textarea rows="10" cols="30">&lt;/textarea></textarea>
+      </dd>
+      <fieldset disabled>
+        <legend>这里面的全都禁用了</legend>
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+      </fieldset>
+      <button type="submit">提交</button>
+      <button type="reset">重置</button>
+    </form>
+    <div id="page_bottom"></div>
   </body>
 </html>
