--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -15,7 +15,7 @@
     <hr/>
     <hr/>
     <marquee>飘~~~</marquee>
-    <p>这几种强调<b>有什么 </b><strong>区别呢? </strong><u>这个呢? </u> <em>这个呢?</em></p>
+    <p>这几种强调<b>有什么 </b><strong>区别呢？ </strong><u>这个呢？ </u><em>这个呢？</em></p>
     <p>&lt;!-- 这段注释需要出现在页面里面 --></p>
     <p>html的注释怎么写?</p>
     <p>下面是一段javascript代码, 最合适用何种标签表示呢?</p>
@@ -155,6 +155,7 @@
       <dd>
         <textarea rows="10" cols="30">&lt;/textarea></textarea>
       </dd>
+      <br/>
       <fieldset disabled>
         <legend>这里面的全都禁用了</legend>
         <input type="text">
@@ -165,6 +166,7 @@
       <button type="submit">提交</button>
       <button type="reset">重置</button>
     </form>
+    <hr/>
     <div id="page_bottom"></div>
   </body>
 </html>
