--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -87,7 +87,7 @@
     </dt>
     <hr/>
     <h3>Google搜索</h3>
-    <form action="https:www.google.com/search" target="_blank">
+    <form action="https://www.google.com/search" target="_blank">
       <input type="search" name="q">
       <button type="submit" >在新窗口打开搜索结果</button>
     </form>
