--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -88,7 +88,7 @@
     <hr/>
     <h3>Google搜索</h3>
     <form action="https://www.google.com/search" target="_blank">
-      <input type="search" name="q">
+      <input type="search" name="q" required>
       <button type="submit" >在新窗口打开搜索结果</button>
     </form>
     <hr/>
