--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+</head>
 <html>
   <body>
     <h1>lorem</h1>
@@ -167,6 +170,43 @@
       <button type="reset">重置</button>
     </form>
     <hr/>
+    <table border="1">
+      <tr>
+        <td>编号</td>
+        <td bgcolor="red">品名</td>
+        <td>进价</td>
+        <td>出价</td>
+      </tr>
+      <tr>
+        <td>aaa</td>
+        <td bgcolor="red">aaa</td>
+        <th rowspan="2">5</th>
+        <td>aaa</td>
+      </tr>
+      <tr>
+        <td>aaa</td>
+        <td bgcolor="red">aaa</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <td>aaa</td>
+        <td bgcolor="red">aaa</td>
+        <td>aaa</td>
+        <td>aaa</td>
+      </tr>
+      <tr>
+        <td>aaa</td>
+        <td bgcolor="red">aaa</td>
+        <td>aaa</td>
+        <td>aaa</td>
+      </tr>
+    </table>
+    <hr/>
+    <a href="#">
+      <img src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" width="300" height="400">
+    </a>
+    <hr/>
+    <a href="https://www.mi.com/">小米</a>
     <div id="page_bottom"></div>
   </body>
 </html>
