--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -170,37 +170,46 @@
       <button type="reset">重置</button>
     </form>
     <hr/>
-    <table border="1">
-      <tr>
-        <td>编号</td>
-        <td bgcolor="red">品名</td>
-        <td>进价</td>
-        <td>出价</td>
-      </tr>
-      <tr>
-        <td>aaa</td>
-        <td bgcolor="red">aaa</td>
-        <th rowspan="2">5</th>
-        <td>aaa</td>
-      </tr>
-      <tr>
-        <td>aaa</td>
-        <td bgcolor="red">aaa</td>
-        <td>5</td>
-      </tr>
-      <tr>
-        <td>aaa</td>
-        <td bgcolor="red">aaa</td>
-        <td>aaa</td>
-        <td>aaa</td>
-      </tr>
-      <tr>
-        <td>aaa</td>
-        <td bgcolor="red">aaa</td>
-        <td>aaa</td>
-        <td>aaa</td>
-      </tr>
+    <table border=1>
+      <col>
+      <col bgcolor="red">
+      <col>
+      <col>
+      <thead>
+        <tr>
+          <th>编号</th>
+          <th>品名</th>
+          <th>进价</th>
+          <th>出价</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>aaa</th>
+          <td>aaa</td>
+          <td rowspan="2">5</td>
+          <td>aaa</td>
+        </tr>
+        <tr>
+          <th>aaa</th>
+          <td>aaa</td>
+          <td>8</td>
+        </tr>
+        <tr>
+          <th>aaa</th>
+          <td>aaa</td>
+          <td>aaa</td>
+          <td>aaa</td>
+        </tr>
+        <tr>
+          <th>aaa</th>
+          <td>aaa</td>
+          <td>aaa</td>
+          <td>aaa</td>
+        </tr>
+      </tbody>
     </table>
+    
     <hr/>
     <a href="#">
       <img src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" width="300" height="400">
