--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -209,13 +209,20 @@
         </tr>
       </tbody>
     </table>
-    
+
     <hr/>
-    <a href="#">
-      <img src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" width="300" height="400">
-    </a>
+    <img usemap="#area_rect" src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" alt="图片加载失败" width="350" height="450">
+    <map name="area_rect">
+      <area shape="rect" coords="50,50,350,350" href="" alt="加载失败">
+    </map>
     <hr/>
     <a href="https://www.mi.com/">小米</a>
+    <br/>
+    <iframe src="https://nodejs.org/en/" width="350" height="200"></iframe>
+    <br/>
+    <p><font size="5"><pre><strong>aaa</strong>         <strong>bbbbb</strong></pre></font></p>
+    <p><pre>aaa                 bbbbb</pre></p>
+    <p>>>>>>>>>>>>>>>>>><<<<<<<<<< &lt;span>&lt;/span&gt;</p>
     <div id="page_bottom"></div>
   </body>
 </html>
