--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-<html>
   <body>
     <h1>lorem</h1>
     <h2>Lorem,ipsum.</h2>
@@ -213,7 +216,7 @@
     <hr/>
     <img usemap="#area_rect" src="https://drscdn.500px.org/photo/174778125/m%3D1170_k%3D1/2841ccf2a3720e8e794a6a6930f6ff2c" alt="图片加载失败" width="350" height="450">
     <map name="area_rect">
-      <area shape="rect" coords="50,50,350,350" href="" alt="加载失败">
+      <area shape="rect" coords="50,50,270,270" href="" alt="加载失败">
     </map>
     <hr/>
     <a href="https://www.mi.com/">小米</a>
