--- a/miao/css-selector-practise.html
+++ b/miao/css-selector-practise.html
@@ -39,11 +39,11 @@
 
     <style>
        
-       div > a[href^="https://"]:link {
+       div > a:link {
         color: pink;
       }
 
-       div > a[href^="https://"]:visited {
+       div > a:visited {
         color: orange;
       }
 
