--- a/miao/css-selector-practise.html
+++ b/miao/css-selector-practise.html
@@ -98,13 +98,16 @@
 
     <style>
 
-      div.a > ul > li:nth-child(n+4) {
+      .a > ul > li:nth-child(n+4):nth-child(-n+7) {
+        color: red;
+      }
+      /* div.a > ul > li:nth-child(n+4) {
         color: red;
       }
 
       div.a > ul > li:nth-child(n+8) {
         color: black;
-      }
+      } */
 
 
     </style>
@@ -128,8 +131,19 @@
 
 
     <style>
+      
+      .b > ul >li:nth-child(n):nth-child(-n+25) {
+        color:red;
+      }
+      
+      .b > ul >li:nth-child(n+35):nth-child(-n+50) {
+        color: blue;
+      }
 
-      div.b > ul >li:nth-child(n+65) {
+      .b > ul >li:nth-child(n+65) {
+        color: green;
+      }
+      /* div.b > ul >li:nth-child(n+65) {
         color: green;
       }
 
@@ -155,7 +169,7 @@
 
       div.b > ul >li:nth-child(n+65) {
         color: green;
-      }
+      } */
 
     </style>
     <div class="b">
