--- a/miao/css-font-text-practise.html
+++ b/miao/css-font-text-practise.html
@@ -9,17 +9,36 @@
       font-size: 50px;
       text-align: center;
       text-shadow: 
-        1px 1px  grey,
-        2px 2px  grey,
-        3px 3px  grey,
-        4px 4px  grey,
-        5px 5px  grey,
-        6px 6px  grey,
-        7px 7px  grey,
-        8px 8px  grey,
-        9px 9px  grey,
-        10px 10px  grey,
-        11px 11px  grey; 
+        1px 1px grey,
+        2px 2px grey,
+        3px 3px grey,
+        4px 4px grey,
+        5px 5px grey,
+        6px 6px grey,
+        7px 7px grey,
+        8px 8px grey,
+        9px 9px grey,
+        10px 10px grey,
+        11px 11px grey,
+        12px 12px grey,
+        13px 13px grey,
+        14px 14px grey,
+        15px 15px grey,
+        16px 16px grey,
+        17px 17px grey,
+        18px 18px grey,
+        19px 19px grey,
+        20px 20px grey,
+        21px 21px grey,
+        22px 22px grey,
+        23px 23px grey,
+        24px 24px grey,
+        25px 25px grey,
+        26px 26px grey,
+        27px 27px grey,
+        28px 28px grey,
+        29px 29px grey,
+        30px 30px grey;
     }
 
     h1 span {
@@ -46,8 +65,9 @@
 
     h2 {
       text-align: center;
-      font-family: 'Times New Roman', 宋体;
+      font-family: 'Times New Roman', '微软雅黑';
       text-transform: capitalize;
+      font-variant: small-caps;
       text-shadow: 0px 0px 8px grey;
     }
 
