--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -13,6 +13,7 @@
   
   .a {
     background-color: black;
+    min-width: 600px;
   }
 
   .a section {
@@ -43,12 +44,10 @@
 
   .d {
     background-color: rgb(238, 138, 238);
+    
   }
 
   .d p {
-    margin-left: auto;
-    margin-right: auto;
-    width: 600px;
     text-align: center;
   }
 </style>
