--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -26,6 +26,7 @@
   .b {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0px;
     width: 600px;
   }
 
@@ -47,6 +48,25 @@
   .d p {
     text-align: center;
   }
+  
+    table {
+    border-spacing: 30px 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  td:hover {
+    background-color: red;
+  }
+
+  td {
+    border: 3px solid black;
+    background-color: pink;
+    width: 174px;
+    height: 34px;
+    text-align: center;
+  }
+
 </style>
 <body>
   <div class="a">
@@ -59,7 +79,30 @@
         页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px
         页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px
     </p>
+    
   </div>
+    <table>
+      <tr>
+        <td>宽180高40(包含边框)</td>
+        <td>产品</td>
+        <td>产品</td>
+      </tr>
+      <tr>
+        <td>水平间隙30px</td>
+        <td>产品</td>
+        <td>产品</td>
+      </tr>
+      <tr>
+        <td>垂直间隙15px</td>
+        <td>产品</td>
+        <td>产品</td>
+      </tr>
+      <tr>
+        <td>边框宽度3px</td>
+        <td>产品</td>
+        <td>产品</td>
+      </tr>
+    </table>
   <div class="c">
     <p class="dot">link</p>
     <p class="dot">link</p>
