--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -48,8 +48,34 @@
   .d p {
     text-align: center;
   }
-  
-    table {
+  section div:hover {
+    background-color: red;
+  }
+
+  section div {
+    background-color: pink;
+    width: 174px;
+    line-height: 34px;
+    border: 3px solid black;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  section {
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+  }
+  section div:nth-child(n+5) {
+    margin-left: 210px;
+  }
+  section div:nth-child(n+9) {
+    margin-left: 420px;
+  }
+  section div:nth-child(4n+5) {
+    margin-top: -220px;
+  }
+
+    /* table {
     border-spacing: 30px 15px;
     margin-right: auto;
     margin-left: auto;
@@ -66,7 +92,7 @@
     width: 174px;
     height: 34px;
     text-align: center;
-  }
+  } */
 
 </style>
 <body>
@@ -82,7 +108,21 @@
     </p>
     
   </div>
-    <table>
+  <section>
+    <div>宽180高40(包含边框)</div>
+    <div>水平间隙30px</div>
+    <div>垂直间隙15px</div>
+    <div>边框宽度3px</div>
+    <div>产品</div>
+    <div>产品</div>
+    <div>产品</div>
+    <div>产品</div>
+    <div>产品</div>
+    <div>产品</div>
+    <div>产品</div>
+    <div>产品</div>
+  </section>
+    <!-- <table>
       <tr>
         <td>宽180高40(包含边框)</td>
         <td>产品</td>
@@ -103,7 +143,7 @@
         <td>产品</td>
         <td>产品</td>
       </tr>
-    </table>
+    </table> -->
   <div class="c">
     <p class="dot">link</p>
     <p class="dot">link</p>
