--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -30,15 +30,22 @@
     width: 600px;
   }
 
-  .c p {
+  .c  {
     margin-top: 0;
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
     width: 600px;
+    overflow: hidden;
   }
-  .c .dot {
-    border-bottom: 1px dotted;
+  .c p {
+    margin-top: 0;
+    margin-bottom: 0;
+    border-bottom: 1px dotted black;
+  }
+
+  .c p:last-child {
+    margin-bottom: -1px;
   }
   
   .d {
