--- a/miao/block-basic.html
+++ b/miao/block-basic.html
@@ -16,11 +16,12 @@
     width: 600px;
   }
   .b {
-    border: 1px solid black;
+    border: 2px solid black;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
     width: 600px;
+
   }
   .c {
     margin-top: 16px;
@@ -29,8 +30,9 @@
     margin-right: auto;
     width: 600px;
     height: 4em;
+    padding: 0 10px;
     overflow: auto;
-    text-align: left;
+    box-sizing: border-box;
   }
   .d {
     margin-left: auto;
@@ -41,6 +43,7 @@
   }
   .d:hover {
     width: 600px;
+    box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
   }
