--- a/miao/css-block-layout.html
+++ b/miao/css-block-layout.html
@@ -81,6 +81,30 @@
   section div:nth-child(4n+5) {
     margin-top: -220px;
   }
+  
+  section.ff {
+    box-sizing: border-box;
+    width: 600px;
+    margin: 20px auto;
+    text-align: center;
+  }
+
+  .ff span {
+    display: inline-block;
+    box-sizing: border-box;
+    border: 3px solid black;
+    background-color: pink;
+    width: 180px;
+    height: 40px;
+    margin-top: 15px;
+    margin-right: 30px;
+  }
+  .ff span:nth-child(3n+3) {
+    margin-right: 0px;
+  }
+  .ff span:hover {
+    background-color: red;
+  }
 
     /* table {
     border-spacing: 30px 15px;
@@ -151,6 +175,20 @@
         <td>产品</td>
       </tr>
     </table> -->
+    <section class="ff">
+      <span>宽180高40(包含边框)</span><!--
+            --><span>产品</span><!--
+            --><span>产品</span><!--
+            --><span >水平间隙30px</span><!--
+            --><span>产品</span><!--
+            --><span>产品</span><!--
+            --><span >垂直间隙15px</span><!--
+            --><span>产品</span><!--
+            --><span>产品</span><!--
+            --><span>边框宽度3px</span><!--
+            --><span>产品</span><!--
+            --><span>产品</span>
+    </section>
   <div class="c">
     <p class="dot">link</p>
     <p class="dot">link</p>
