--- a/miao/bootstrap-table.html
+++ b/miao/bootstrap-table.html
@@ -285,8 +285,37 @@
             </tr>
           </tbody>
         </table>
-
-    
-
+        <hr>
+        <h3>8. class="table table-borderless table-sriped table-hover table-dark"</h3>
+    <table class="table table-borderless table-sriped table-hover table-dark">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+          <th scope="col">Handle</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry the Bird</td>
+          <td></td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+    </table>
 </body>
 </html>
