--- a/miao/bootstrap-table.html
+++ b/miao/bootstrap-table.html
@@ -286,8 +286,8 @@
           </tbody>
         </table>
         <hr>
-        <h3>8. class="table table-borderless table-sriped table-hover table-dark"</h3>
-    <table class="table table-borderless table-sriped table-hover table-dark">
+        <h3>8. class="table table-dark"</h3>
+    <table class="table table-dark">
       <thead>
         <tr>
           <th scope="col">#</th>
