--- a/miao/qq-mail-float.html
+++ b/miao/qq-mail-float.html
@@ -42,7 +42,7 @@
     text-indent: 2em;
     padding: 10px;
     line-height: 1.5em;
-    overflow: auto;
+    overflow-y: auto;
   }
 </style>
 <body>
