--- a/miao/oald-layout-float.html
+++ b/miao/oald-layout-float.html
@@ -50,7 +50,7 @@
     text-indent: 2em;
     line-height: 1.5em;
     padding: 10px;
-    overflow: auto;
+    overflow-y: auto;
   }
 </style>
 <body>
