--- a/miao/radio-slider.html
+++ b/miao/radio-slider.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,41 +11,85 @@
   section {
     width: 600px;
     margin: 0 auto;
-    text-align: center;
+    xtext-align: center;
   }
+
   div {
     width: 600px;
-    height: 400px;
+    height: 450px;
     overflow: hidden;
     position: relative;
   }
+
   img {
     width: 600px;
     height: 400px;
     position: absolute;
     right: -100%;
     transition: 1s ease;
+    top: 0px;
   }
-  section input:nth-child(1):checked ~ div img:nth-child(1),
-  section input:nth-child(2):checked ~ div img:nth-child(2),
-  section input:nth-child(3):checked ~ div img:nth-child(3),
-  section input:nth-child(4):checked ~ div img:nth-child(4) {
+
+  section input:nth-child(1):checked~div img:nth-of-type(1),
+  section input:nth-child(2):checked~div img:nth-of-type(2),
+  section input:nth-child(3):checked~div img:nth-of-type(3),
+  section input:nth-child(4):checked~div img:nth-of-type(4) {
     right: 0;
     z-index: -1;
   }
+
+  label {
+    box-sizing: border-box;
+    display: block;
+    width: 150px;
+    height: 500px;
+    float: left;
+  }
+
+  span {
+    font-size: 30px;
+    width: 150px;
+    background-color: tan;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 0px;
+    display: inline-block;
+    text-align: center;
+  }
+
+  input {
+    display: none;
+  }
+
+  span.border {
+    border-left: 2px solid black;
+  }
+
+  input:nth-child(1):checked~div label:nth-child(1) span,
+  input:nth-child(2):checked~div label:nth-child(2) span,
+  input:nth-child(3):checked~div label:nth-child(3) span,
+  input:nth-child(4):checked~div label:nth-child(4) span {
+    background-color: aqua;
+  }
 </style>
+
 <body>
   <section>
     <input type="radio" name="a" id="a1" checked>
     <input type="radio" name="a" id="a2">
     <input type="radio" name="a" id="a3">
     <input type="radio" name="a" id="a4">
-  <div>
-    <img src="https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/1.jpg" alt="">
-    <img src="https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/2.jpg" alt="">
-    <img src="https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/3.jpg" alt="">
-    <img src="https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/4.jpg" alt="">
-  </div>
+    <div>
+      <label for="a1"><span>1</span></label>
+      <label for="a2"><span class="border">2</span></label>
+      <label for="a3"><span class="border">3</span></label>
+      <label for="a4"><span class="border">4</span></label>
+      <img src="https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/1.jpg" alt="">
+      <img src="https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/2.jpg" alt="">
+      <img src="https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/3.jpg" alt="">
+      <img src="https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/4.jpg" alt="">
+    </div>
   </section>
 </body>
+
 </html>
