--- a/miao/css-3d.html
+++ b/miao/css-3d.html
@@ -49,6 +49,10 @@
     transform: rotateX(-90deg) translateZ(100px);
     background-color: yellowgreen;
   }
+
+  section:hover div{
+    opacity: 0.8;
+  }
   div {
     width: 200px;
     height: 200px;
