--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -21,7 +21,7 @@
         <li><a href="https://qiye.mi.com/">企业团购</a></li>
         <li><a href="https://www.mi.com/aptitude/list/?id=88">资质证照</a></li>
         <li><a href="https://www.mi.com/aptitude/list/">协议规则</a></li>
-        <li><a href="https://www.mi.com/appdownload/">下载app</a></li>
+        <li class="download"><a href="https://www.mi.com/appdownload/">下载app<div><img src="download.png" alt=""><span>小米商城app</span></div></a></li>
         <li><a href="https://xiaomishare.mi.com/?from=micom">智能生活</a></li>
         <li><a href="javascript:;">Select Location</a></li>
       </ul>
