--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -8,29 +8,25 @@
 </head>
 <link rel="stylesheet" href="mi.css">
 <body>
-  <div class="a">
-    <div class="b"> 
-      <ul class="left">
-        <li><a href="https://www.mi.com/index.html">小米商城</a></li>
-        <li><a href="https://www.miui.com/">MIUI</a></li>
-        <li><a href="https://iot.mi.com/">IoT</a></li>
-        <li><a href="https://i.mi.com/">云服务</a></li>
-        <li><a href="https://airstar.com/home">天星教科</a></li>
-        <li><a href="https://youpin.mi.com/">有品</a></li>
-        <li><a href="https://xiaoai.mi.com/">小爱开放平台</a></li>
-        <li><a href="https://qiye.mi.com/">企业团购</a></li>
-        <li><a href="https://www.mi.com/aptitude/list/?id=88">资质证照</a></li>
-        <li><a href="https://www.mi.com/aptitude/list/">协议规则</a></li>
-        <li class="download"><a href="https://www.mi.com/appdownload/">下载app<div><img src="download.png" alt=""><span>小米商城app</span></div></a></li>
-        <li><a href="https://xiaomishare.mi.com/?from=micom">智能生活</a></li>
-        <li><a href="javascript:;">Select Location</a></li>
-      </ul>
-      <ul class="right">
-        <li><a href="">登录</a></li>
-        <li><a href="">注册</a></li>
-        <li><a href="">消息通知</a></li>
-        <li><a href="">购物车</a></li>
-      </ul>
+  <div class="page">
+    <div class="nav-container">
+      <div class="nav-content">
+        <ul class="nav">
+          <li><a href="#">小米商城</a><span>|</span></li>
+          <li><a href="#">MIUI</a><span>|</span></li>
+          <li><a href="#">IoT</a><span>|</span></li>
+          <li><a href="#">云服务</a><span>|</span></li>
+          <li><a href="#">天星教科</a><span>|</span></li>
+          <li><a href="#">有品</a><span>|</span></li>
+          <li><a href="#">小爱开放平台</a><span>|</span></li>
+          <li><a href="#">企业团购</a><span>|</span></li>
+          <li><a href="#">资质证照</a><span>|</span></li>
+          <li><a href="#">协议规则</a><span>|</span></li>
+          <li class="download-app"><a href="#">下载app</a><span>|</span><div><img src="download.png" alt=""><span>小米商城APP</span></div></li>
+          <li><a href="#">智能生活</a><span>|</span></li>
+          <li><a href="#">Selection Location</a><span>|</span></li>
+        </ul>
+      </div>
     </div>
   </div>
 </body>
