--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,4 +1,4 @@
-<script id="ch0103/01" >
+<!-- <script id="ch0103/01" >
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   console.log(a + b)
@@ -9,11 +9,12 @@
   var b = Number(prompt("b"))
   var c = Number(prompt("c"))
   console.log(( a + b) * c)
-</script>
+</script> -->
 
 <script id="ch0103/03">
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   var c = Number(prompt("c"))
-  console.log((a + b) / c)
+  var res = (a + b) / c
+  console.log(parseInt(res))
 </script>
