--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,4 +1,4 @@
-<!-- <script id="ch0103/01" >
+<script id="ch0103/01" >
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
   console.log(a + b)
@@ -9,7 +9,7 @@
   var b = Number(prompt("b"))
   var c = Number(prompt("c"))
   console.log(( a + b) * c)
-</script> -->
+</script>
 
 <script id="ch0103/03">
   var a = Number(prompt("a"))
@@ -17,4 +17,26 @@
   var c = Number(prompt("c"))
   var res = (a + b) / c
   console.log(parseInt(res))
+</script>
+
+<script id="ch0103/04">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var y = a % b
+  var x = (a- y) /b
+  console.log(x,y)
+</script>
+
+<script id="ch0103/05">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var res = a / b
+  console.log(res.toFixed(9))
+</script>
+
+<script id="ch0103/06">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var res = b / a * 100
+  console.log(res.toFixed(3) + "%")
 </script>
