--- a/miao/noi.html
+++ b/miao/noi.html
@@ -40,3 +40,36 @@
   var res = b / a * 100
   console.log(res.toFixed(3) + "%")
 </script>
+
+<script id="ch0103/07">
+  var x = Number(prompt("x"))
+  var a = Number(prompt("a"))  
+  var b = Number(prompt("b"))
+  var c = Number(prompt("c"))
+  var d = Number(prompt("d"))
+  var res = a * Math.pow(x, 3) + b * Math.pow(x, 2) + c * x + d
+  console.log(res.toFixed(7))
+</script>
+
+<script id="ch0103/08">
+  var a = Number(prompt("a"))
+  var res = 5 * (a - 32) / 9
+  console.log(res.toFixed(5))
+</script>
+
+<script id="ch0103/09">
+  var pi = 3.14159
+  var R = Number(prompt("R"))
+  var D = 2 * R
+  var C = 2 * pi * R
+  var S = pi * Math.pow(R, 2)
+  console.log(D.toFixed(4), C.toFixed(4), S.toFixed(4))
+</script>
+
+<script id="ch0103/10">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var res = 1 / (1 / a + 1 / b)
+  console.log(res.toFixed(2))
+</script>
+
