--- a/miao/noi.html
+++ b/miao/noi.html
@@ -73,3 +73,11 @@
   console.log(res.toFixed(2))
 </script>
 
+
+<script id="ch0103/11">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var k = parseInt(a / b)
+  var res = a - k * b
+  console.log(k, res)
+</script>
