--- a/miao/noi.html
+++ b/miao/noi.html
@@ -79,5 +79,5 @@
   var b = Number(prompt("b"))
   var k = parseInt(a / b)
   var res = a - k * b
-  console.log(k, res)
+  console.log(res)
 </script>
