--- a/miao/noi.html
+++ b/miao/noi.html
@@ -81,3 +81,53 @@
   var res = a - k * b
   console.log(res)
 </script>
+
+<script id="ch0103/12">
+  var r = Number(prompt("r"))
+  var pi = 3.14
+  var V = 4 / 3 * pi * Math.pow(r, 3)
+  console.log(V.toFixed(2))
+</script>
+
+<script id="ch0103/13">
+  var a = Number(prompt("a"))
+  var x = parseInt(a / 100)
+  var z = a % 10
+  var y = (a - z - x * 100) /10
+  console.log(String(z) + y + x)
+</script>
+
+<script id="ch0103/14">
+  var h = Number(prompt("h"))
+  var r = Number(prompt("r"))
+  var pi = 3.14159
+  var res = 20 * 1000 / pi / r / r / h
+  console.log(parseInt(res) + 1)
+</script>
+
+<script id="ch0103/15">
+  var n = Number(prompt("n"))
+  var x = Number(prompt("x"))
+  var y = Number(prompt("y"))
+  var res = n - parseInt(y / x) - 1
+  console.log(res)
+</script>
+
+<script id="ch0103/16">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var c = Number(prompt("c"))
+  var d = Number(prompt("d"))
+  var res = Math.sqrt(Math.pow((a - c), 2) + Math.pow((b - d),2))
+  console.log(res.toFixed(3))
+</script>
+
+<!-- <script id="ch0103/17">
+  var a = Number(prompt("a"))
+  var b = Number(prompt("b"))
+  var c = Number(prompt("c"))
+  var d = Number(prompt("d"))
+  var x = Number(prompt("c"))
+  var y = Number(prompt("d"))
+  var p 
+</script> -->
